--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@ux/alert": "^2301.3.0",
+    "@ux/button": "^2301.3.0",
+    "@ux/intents": "^2301.1.0",
+    "@ux/themes": "^4.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
