Use UXCore rext classes for alert text lockup

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@ux/alert": "^2301.3.0",
     "@ux/button": "^2301.3.0",
     "@ux/intents": "^2301.1.0",
+    "@ux/text": "^2301.4.0",
     "@ux/themes": "^4.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
